<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeamTasker</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on TeamTasker’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="welcome_to_the_teamtaskerapp">Welcome to the TeamTasker😊</string>

    <string name="nav_my_profile"><b>My Profile</b></string>
    <string name="nav_sign_out"><b>Sign Out</b></string>

    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_user_image_content_description">Profile Image</string>
    <string name="board_name">Board Name</string>
    <string name="create_board">Create Board</string>
    <string name="create_new_board">create new board</string>
    <string name="create_btn">CREATE</string>

    <string name="no_boards_are_available">No Boards are available</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="Card_Details">Card Details</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card  \'%1$s\'  ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">teamTasker_notification_channel_id</string>
</resources>